# demo

./: BUILD.gn
base/: BUILD.gn  base.h  basic_effect.cc  basic_effect.h  camera_controller.cc  camera_controller.h  camera_provider.h  common_provider.h  depth_effect.cc  depth_effect.h  effect_dict.cc  effect_dict.h  effected_scene_render.cc  effected_scene_render.h  geometry.cc  geometry.h  geometry_loader.cc  geometry_loader.h  material.cc  material.h  resource_util.cc  resource_util.h  scene_loader.cc  scene_loader.h  scene_render.cc  scene_render.h  sdkmesh.cc  sdkmesh.h  sdkmesh_effect.cc  sdkmesh_effect.h  sdkmesh_loader.cc  sdkmesh_loader.h  shadow_depth_effect.cc  shadow_depth_effect.h  shadow_render_tree.cc  shadow_render_tree.h  shadowmap_effect.cc  shadowmap_effect.h  textured_effect.cc  textured_effect.h
base/hlsl/: basic_effect.hlsl.vs  basic_effect.ps.hlsl  basic_effect.vs.hlsl  color_depth.hlsl.ps  depth.hlsl.vs  depth.ps.hlsl  sdkmesh.vs.hlsl  shadow_depth.hlsl.ps  shadow_depth.hlsl.vs  shadow_depth.vs.hlsl  shadowmap.hlsl.ps  shadowmap.hlsl.vs  shadowmap.vs.hlsl  shadowmap_pcf.ps.hlsl  tex.hlsl.ps  tex.ps.hlsl  tex.vs.hlsl
compute_shader/: BUILD.gn  effect.cc  effect.h  effect.hlsl.ps  effect.hlsl.vs  main.cc  scene.xml  vertadd.cc
data/: effects.xml
data/media/: brickwall.dds  brickwall_broken.dds  checkerboard.dds  earth.dds  rocks.dds  spotlight_effect.dds  wall.dds  wall_NM_height.dds
decal/: BUILD.gn  scene.cc  scene.xml
depth/: BUILD.gn  main.cc  scene.xml
detailmap/: BUILD.gn  detailmap.ds.hlsl  detailmap.hlsl.hs  detailmap.hlsl.vs  detailmap.hs.hlsl  detailmap.ps.hlsl  detailmap.vs.hlsl  detailmap_effect.cc  detailmap_effect.h  plane.cc  quad.cc
displacement_mapping/: BUILD.gn  effect.cc  effect_adapter.cc  effect_adapter.h  main.cc  scene.xml  scene_loader.cc  scene_loader.h
geometry/: BUILD.gn  objects.xml  scene.xml  scene_objects.cc  triangle.cc
monblur/: BUILD.gn  monblur.cc  monblur.hlsl.gs  monblur.hlsl.ps  monblur.vs.hlsl  monblur_effect.cc  monblur_effect.h  scene.xml
multislot/: BUILD.gn  main.cc  scene.xml
parallax_occlusion_mapping/: BUILD.gn  effect.cc  effect.h  effect.hlsl.ps  effect.hlsl.vs  effect_adapter.cc  main.cc  scene.xml  scene_loader.cc  scene_loader.h
picking/: BUILD.gn  simple.cc
samples/: BUILD.gn
samples/compute_shader/: BUILD.gn  blur.cc  blur.xml  horzblur.cs.hlsl  vertblur.cs.hlsl
samples/depth/: scene.xml
samples/objects/: BUILD.gn  earth.cc  multisolt_earch.cc  objects.xml  scene_objects.cc  sdkmesh.cc
samples/overlay/: BUILD.gn
samples/particle/: BUILD.gn  fire.cc  partice.cc  partice.h  partice.hlsl  particle.hlsl
samples/particle/fire/: gs.hlsl  ps.hlsl  streamout.gs.hlsl  streamout.vs.hlsl  vs.hlsl
samples/sdkmesh/: BUILD.gn  mesh.cc  scene.cc  scene.xml  simple.cc
samples/stencil/: BUILD.gn  mirror.cc
samples/tessellation/: BUILD.gn  grid.cc  quad.cc  tile.cc  triangle.cc
samples/transform/: BUILD.gn  rotate.cc
samples/triangle/: BUILD.gn  main.cc
shadow/: BUILD.gn  data.xml  depth.cc  depth_scene.xml  effect.cc  effect.h  main.cc  pcf.cc  scene.cc  scene.xml  shadow_depth.cc  shadow_depth.hlsl.ps  shadow_depth.hlsl.vs  shadow_render_tree.cc  shadow_render_tree.h  shadowmap.cc  slot_depth.cc
shadow/hlsl/: shadow_depth.hlsl.ps  shadow_depth.hlsl.vs  slot_shadow_depth.hlsl.ps
stencil/: BUILD.gn  mirror.cc  mirror.xml  spotlight.cc  spotlight.xml
terrain/: BUILD.gn  grid.cc  heightmap.cc  normal.cc  render_normal.cc  terrain_grid.cc  texture.cc  texture_array.cc  tile.cc  util.cc  util.h
terrain/grid/: ds.hlsl  hs.hlsl  ps.hlsl  vs.hlsl
terrain/heightmap/: ds.hlsl  hs.hlsl  ps.hlsl  vs.hlsl
terrain/normal/: ds.hlsl  hs.hlsl  ps.hlsl  vs.hlsl
terrain/render_normal/: gs.hlsl  ps.hlsl  vs.hlsl
terrain/tex/: blend.dds  darkdirt.dds  grass.dds  lightdirt.dds  snow.dds  stone.dds
terrain/texture/: ds.hlsl  hs.hlsl  ps.2darray.hlsl  ps.hlsl
tessellation/: BUILD.gn  grid.cc  quad.cc  rect.cc  tile.cc  tile.h  triangle.cc
tools/: sdkmesh.cc  sdkmesh.h
