
static_library("base") {
  sources = [
    "effect_dict.cc",
    "effect_dict.h",
    "resource_util.cc",
    "resource_util.h",
    "shadow_depth_effect.cc",
    "shadow_depth_effect.h",
    "shadow_render_tree.cc",
    "shadow_render_tree.h",
    "textured_effect.cc",
    "textured_effect.h",
  ]

  deps = [
    "//lordaeron",
  ]
}