
static_library("base") {
  sources = [
    "basic_effect.cc",
    "basic_effect.h",
    "resource_util.cc",
    "resource_util.h",
    "depth_effect.cc",
    "depth_effect.h",
    "material.cc",
    "material.h",
    "effected_scene_render.cc",
    "effected_scene_render.h",
    "shadow_render_tree.cc",
    "shadow_render_tree.h",
    "shadowmap_effect.cc",
    "shadowmap_effect.h",
    "textured_effect.cc",
    "textured_effect.h",
  ]

  deps = [
    "//lordaeron",
  ]
}