
group("detailmap") {
  deps = [
    ":plane",
  ]
}

static_library("effect") {
  sources = ["detailmap_effect.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("plane") {
  output_name = "demo_detailmap_plane"
  sources = [ "plane.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    "//azer",
    ":effect",
  ]
}