

group("geometry") {
  deps = [
    ":triangle",
    ":objects",
    ":scene_objects",
  ]
}

executable("triangle") {
  sources = [ "triangle.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("objects") {
  sources = [ "objects.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("scene_objects") {
  sources = [ "scene_objects.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

