

group("geometry") {
  deps = [
    ":geometry_triangle",
    ":geometry_scene_objects",
  ]
}

executable("geometry_triangle") {
  sources = [ "triangle.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("geometry_scene_objects") {
  sources = [ "scene_objects.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

