
group("shadow") {
  deps = [
    ":shadow_scene",
    ":shadow_depth",
  ]
}

executable("shadow_scene") {
  sources = [
    "scene.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("shadow_depth") {
  sources = [
    "depth.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("shadow_depth_to_texture") {
  sources = [
    "shadow_depth.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

