
group("shadow") {
  deps = [
    ":shadow_scene",
    ":shadow_depth",
    ":shadowmap",
  ]
}

executable("shadow_scene") {
  sources = [
    "scene.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("shadow_depth") {
  sources = [
    "shadow_depth.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("shadowmap") {
  sources = [
    "shadowmap.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}
