
group("shadow") {
  deps = [
    ":shadow_scene",
    ":shadow_depth",
    ":shadowmap",
  ]
}

executable("shadow_scene") {
  sources = [
    "scene.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("shadow_depth") {
  sources = [
    "shadow_depth.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("shadowmap") {
  output_name = "demo_shadow_shadowmap"
  sources = [
    "shadowmap.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}
