
group("terrain") {
  deps = [
    ":grid",
    ":heightmap",
    ":normal",
  ]
}

static_library("util") {
  sources = [
    "tile.cc",
    "util.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("grid") {
  output_name = "demo_terrain_grid"
  sources = [ "grid.cc", ]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}

executable("heightmap") {
  output_name = "demo_terrain_heightmap"
  sources = ["heightmap.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}


executable("normal") {
  output_name = "demo_terrain_normal"
  sources = ["normal.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}
