
group("terrain") {
  deps = [
    ":grid",
    ":heightmap",
    ":normal",
    ":render_normal",
    ":texture",
    ":texture_array",
  ]
}

static_library("util") {
  sources = [
    "tile.cc",
    "util.cc",
  ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("grid") {
  output_name = "demo_terrain_grid"
  sources = [ "grid.cc", ]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}

executable("heightmap") {
  output_name = "demo_terrain_heightmap"
  sources = ["heightmap.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}

executable("render_normal") {
  output_name = "demo_terrain_render_normal"
  sources = ["render_normal.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}


executable("normal") {
  output_name = "demo_terrain_normal"
  sources = ["normal.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}

executable("texture") {
  output_name = "demo_terrain_texture"
  sources = ["texture.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}


executable("texture_array") {
  output_name = "demo_terrain_texture_array"
  sources = ["texture_array.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":util",
  ]
}
