

group("tessellation") {
  deps = [
    ":tessellation_triangle",
    ":tessellation_quad",
    ":tessellation_tile",
  ]
}

executable("tessellation_triangle") {
  sources = [ "triangle.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("tessellation_quad") {
  sources = [ "quad.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("tessellation_tile") {
  sources = [ "tile.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

