
group("compute_shader") {
  deps = [
    ":vertadd",
    ":blur",
  ]
}

executable("vertadd") {
  output_name = "samples_cs_vertadd"
  sources = [ "vertadd.cc", ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("blur") {
  output_name = "samples_cs_blur"
  sources = [ "blur.cc", ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

