
group("objects") {
  deps = [ ":earth", 
           ":mslot_earth",  
           ":scene_objects",
           ":sdkmesh",
         ]
}

executable("earth") {
  output_name = "samples_objects_earth"
  sources = [ "earth.cc", ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("mslot_earth") {
  output_name = "samples_objects_mslot_earth"
  sources = [ "earth.cc", ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("scene_objects") {
  output_name = "samples_objects_scene"
  sources = [ "scene_objects.cc", ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("sdkmesh") {
  output_name = "samples_objects_sdkmesh"
  sources = [ "sdkmesh.cc", ]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}