

group("tessellation") {
  deps = [
    ":tessellation_triangle",
    ":tessellation_quad",
    ":tessellation_grid",
  ]
}

static_library("tile") {
  sources = ["tile.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("tessellation_triangle") {
  sources = [ "triangle.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("tessellation_quad") {
  sources = [ "quad.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("tessellation_grid") {
  sources = [ "grid.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
    ":tile",
  ]
}



