

group("tessellation") {
  deps = [
    ":triangle",
    ":quad",
  ]
}

static_library("tile") {
  sources = ["tile.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("triangle") {
  output_name = "samples_tessellation_triangle"
  sources = [ "triangle.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

executable("quad") {
  output_name = "samples_tessellation_quad"
  sources = [ "quad.cc",]
  deps = [
    "//lordaeron",
    "//demo/base",
  ]
}

